deleted files no longer needed

--- a/tao-trader-ui/index.html
+++ b/tao-trader-ui/index.html
@@ -1,14 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>StrategyForge Journal</title>
+
+    <!-- Tailwind CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Meta Description -->
+    <meta
+      name="description"
+      content="StrategyForge Journal – Track, analyze, and refine your trades with clarity."
+    />
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- ✅ Vite entry point -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
